--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <li>
             <a href="#portfolio" class="navbar-link" data-nav-link>Portfolio</a>
           </li> -->
-
+          <!-- 
           <li>
             <a href="#resume" class="navbar-link" data-nav-link>Resume</a>
-          </li>
+          </li> -->
 
           <li>
             <a href="#adjucation" class="navbar-link" data-nav-link>Education & Experience</a>
@@ -77,6 +77,10 @@
 
           <li>
             <a href="#projects" class="navbar-link" data-nav-link>Projects</a>
+          </li>
+
+          <li>
+            <a href="#certificates" class="navbar-link" data-nav-link>Certificates</a>
           </li>
 
           <li>
@@ -107,11 +111,27 @@
       -->
 
       <section class="hero" id="home">
+
+        <div class="about-social">
+
+          <a href="https://www.linkedin.com/in/mit-bumtariya-12m01i2004t" target="_blank" class="social-link">
+            <ion-icon name="logo-linkedin"></ion-icon>
+          </a>
+
+          <a href="https://github.com/mitbumtariya" target="_blank" class="social-link">
+            <ion-icon name="logo-github"></ion-icon>
+          </a>
+
+          <a href="https://x.com/meetbumtariya12" target="_blank" class="social-link">
+            <ion-icon name="logo-twitter"></ion-icon>
+          </a>
+        </div>
+
         <div class="container">
 
           <div class="hero-banner">
 
-            <img src="./assets/images/Profile2.jpg" width="800" height="864" loading="lazy" alt="Mit's Photo"
+            <img src="./assets/images/Profile.png" width="800" height="864" loading="lazy" alt="Mit's Photo"
               class="img-cover">
 
             <!-- <div class="elem elem-1">
@@ -135,7 +155,8 @@
 
           </div>
 
-          <div class="hero-content">
+
+          <div class="hero-content about-content-1 hidden-left">
 
             <h2 class="hero-title">
               <span>Hello I'm</span>
@@ -152,7 +173,10 @@
               <a href="#about" class="btn">About Me</a>
             </div>
 
+
+
           </div>
+
 
         </div>
       </section>
@@ -170,11 +194,11 @@
 
           <figure class="about-banner">
 
-            <img src="./assets/images/sof dev.jpg" width="800" height="652" loading="lazy" alt="Ethan's Photo"
+            <img src="./assets/images/sof dev.jpg" width="800" height="652" loading="lazy" alt="Mit's Photo"
               class="img-cover shrink-hover">
 
 
-            <img src="./assets/images/software.jpg" width="800" height="717" loading="lazy" alt="Ethan's Photo"
+            <img src="./assets/images/software.jpg" width="800" height="717" loading="lazy" alt="Mit's Photo"
               class="abs-img">
 
             <div class="abs-icon abs-icon-1">
@@ -223,8 +247,12 @@
               learning. My focus is on writing maintainable code and delivering high-quality software that meets user
               needs.
             </p>
-            <a href="#portfolio" class="btn btn-primary blue">View Projects</a>
+            <a href="#projects" class="btn btn-primary blue">View Projects</a>
+
           </div>
+
+
+
 
 
         </div>
@@ -235,7 +263,7 @@
         - #SKILLS
       -->
 
-      <section class="section skills" id="resume">
+      <!-- <section class="section skills" id="resume">
         <div class="container">
 
           <p class="section-subtitle">My Resume</p>
@@ -310,7 +338,7 @@
         </div>
 
 
-      </section>
+      </section> -->
 
 
       <!-- 
@@ -380,89 +408,11 @@
             user
             interaction. </p>
 
-          <!-- <ul class="portfolio-list">
-
-            <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/portfolio-1.jpg')">
-                <div class="card-content">
-
-                  <p class="card-subtitle">Portfolio</p>
-
-                  <h3 class="h3 card-title">Code with purpose, design with clarity—welcome to my creative space</h3>
-
-                  <span class="btn-link">
-                    <span>View Project</span>
-
-                    <ion-icon name="arrow-forward"></ion-icon>
-                  </span>
-
-                </div>
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/libra\ sphere.png')">
-                <div class="card-content">
-
-                  <p class="card-subtitle">Book Rental Management</p>
-
-                  <h3 class="h3 card-title">Rent, return, and explore books—Librasphere makes reading easy and smart
-                  </h3>
-
-                  <span class="btn-link">
-                    <span>View Project</span>
-
-                    <ion-icon name="arrow-forward"></ion-icon>
-                  </span>
-
-                </div>
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/home.png')">
-                <div class="card-content">
-
-                  <p class="card-subtitle">Hotel Management System</p>
-
-                  <h3 class="h3 card-title">Manage guests with ease, from check-in to check-out, all in one simple
-                    system</h3>
-
-                  <span class="btn-link">
-                    <span>View Project</span>
-
-                    <ion-icon name="arrow-forward"></ion-icon>
-                  </span>
-
-                </div>
-              </a>
-            </li>
-
-            <li>
-              <a href="#" class="portfolio-card" style="background-image: url('./assets/images/portfolio-4.jpg')">
-                <div class="card-content">
-
-                  <p class="card-subtitle">Details</p>
-
-                  <h3 class="h3 card-title">Web Application for Desiverse</h3>
-
-                  <span class="btn-link">
-                    <span>View Project</span>
-
-                    <ion-icon name="arrow-forward"></ion-icon>
-                  </span>
-
-                </div>
-              </a>
-            </li>
-
-          </ul> -->
-
 
           <div class="card-container">
 
 
-            <div class="card">
+            <div class="card shrink-hover3">
               <h2>PORTFOLIO</h2>
               <!-- <p class="tech">HTML5, CSS3, JS</p> -->
               <!-- <h3>Playtube</h3> -->
@@ -475,11 +425,16 @@
                 <span>CSS3</span>
                 <span>JAVASCRIPT</span>
               </div>
-              <a href="https://github.com/mitbumtariya/Portfolio" class="github-btn">GitHub</a>
+              <div class="button-row">
+                <a href="https://github.com/mitbumtariya/Portfolio" class="github-btn">View on GitHub
+                </a>
+                <a href="" class="github-btn1">See It in Action
+                </a>
+              </div>
             </div>
 
 
-            <div class="card">
+            <div class="card shrink-hover3">
               <h2>Book Rental Management</h2>
               <!-- <p class="tech">HTML5, CSS3, JS</p> -->
               <!-- <h3>Playtube</h3> -->
@@ -495,11 +450,16 @@
                 <span>EXPRESSJS</span>
                 <span>MONGODB</span>
               </div>
-              <a href="https://github.com/mitbumtariya/librasphere" class="github-btn">GitHub</a>
+              <div class="button-row">
+                <a href="https://github.com/mitbumtariya/librasphere" class="github-btn">View on GitHub</a>
+                <a href="https://librasphere.vercel.app/" class="github-btn1">See It in Action
+
+                </a>
+              </div>
             </div>
 
 
-            <div class="card">
+            <div class="card shrink-hover3">
               <h2>Hotel Management System</h2>
               <!-- <p class="tech">HTML5, CSS3, JS</p> -->
               <!-- <h3>Playtube</h3> -->
@@ -516,7 +476,12 @@
                 <span>EXPRESSJS</span>
                 <span>MONGODB</span>
               </div>
-              <a href="https://github.com/mitbumtariya/hotelmanagementsystem" class="github-btn">GitHub</a>
+              <div class="button-row">
+                <a href="https://github.com/mitbumtariya/hotelmanagementsystem" class="github-btn">View on GitHub
+                </a>
+                <a href="" class="github-btn1">See It in Action
+                </a>
+              </div>
             </div>
 
           </div>
@@ -526,15 +491,15 @@
 
 
       <!-- 
-                - #BLOG
+                - #CERTIFICATES
               -->
 
-      <!-- <section class="section projects" id="projects">
+      <section class="section blog" id="certificates">
         <div class="container">
 
-          <p class="section-subtitle">New Projects</p>
+          <p class="section-subtitle">CERTIFICATES</p>
 
-          <h2 class="h2 section-title">Checkout My All Project</h2>
+          <h2 class="h2 section-title">Checkout My All CERTIFICATES</h2>
 
           <p class="section-text">
             Designed and developed a feature-rich solution focused on performance, usability, and delivering seamless
@@ -549,16 +514,16 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-1.jpg" width="1181" height="843" loading="lazy"
+                    <img src="./assets/images/HTML5.png" width="1181" height="843" loading="lazy"
                       alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
                   </a>
                 </figure>
 
-                <a href="#" class="card-tag">Hotel Management System</a>
+                <a href="#" class="card-tag">HTML5</a>
 
-                <h3 class="card-title">
+                <!-- <h3 class="card-title">
                   <a href="#">Manage guests with ease, from check-in to check-out, all in one simple system.</a>
-                </h3>
+                </h3> -->
 
               </div>
             </li>
@@ -568,17 +533,17 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-2.jpg" width="1181" height="843" loading="lazy"
+                    <img src="./assets/images/CSS3.png" width="1181" height="843" loading="lazy"
                       alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
                   </a>
                 </figure>
 
-                <a href="#" class="card-tag">Book Rental Management</a>
+                <a href="#" class="card-tag">CSS3</a>
 
-                <h3 class="card-title">
+                <!-- <h3 class="card-title">
                   <a href="#">Rent, return, and explore books—Librasphere makes reading easy and smart.
                   </a>
-                </h3>
+                </h3> -->
 
               </div>
             </li>
@@ -588,24 +553,111 @@
 
                 <figure class="card-banner">
                   <a href="#">
-                    <img src="./assets/images/blog-3.jpg" width="1181" height="843" loading="lazy"
+                    <img src="./assets/images/JavaScript.png" width="1181" height="843" loading="lazy"
                       alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
                   </a>
                 </figure>
 
-                <a href="#" class="card-tag">Portfolio</a>
+                <a href="#" class="card-tag">JavaScript</a>
 
-                <h3 class="card-title">
+                <!-- <h3 class="card-title">
                   <a href="#">Code with purpose, design with clarity—welcome to my creative space.</a>
-                </h3>
+                </h3> -->
 
               </div>
             </li>
+
+            <li>
+              <div class="blog-card">
+
+                <figure class="card-banner">
+                  <a href="#">
+                    <img src="./assets/images/cer-1.jpg" width="1181" height="843" loading="lazy"
+                      alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
+                  </a>
+                </figure>
+
+                <a href="#" class="card-tag">Introduction To Cyber Security</a>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="blog-card">
+
+                <figure class="card-banner">
+                  <a href="#">
+                    <img src="./assets/images/cer-2.jpg" width="1181" height="843" loading="lazy"
+                      alt="Jim Morisson Says when the musics over turn off the light" class="img-cover"
+                      style="height: 227px;">
+                  </a>
+                </figure>
+
+                <a href="#" class="card-tag">Foundation of Cybersecurity</a>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="blog-card">
+
+                <figure class="card-banner">
+                  <a href="#">
+                    <img src="./assets/images/cer-3.png" width="1181" height="843" loading="lazy"
+                      alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
+                  </a>
+                </figure>
+
+                <a href="#" class="card-tag">PCAP:Programming Essentials in Python</a>
+
+              </div>
+            </li>
+
+
+            <!-- Hidden certificates -->
+            <div id="more-certificates" style="display: none;">
+              <li>
+                <div class="blog-card">
+
+                  <figure class="card-banner">
+                    <a href="#">
+                      <img src="./assets/images/cer-3.png" width="1181" height="843" loading="lazy"
+                        alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
+                    </a>
+                  </figure>
+
+                  <a href="#" class="card-tag">PCAP:Programming Essentials in Python</a>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="blog-card">
+
+                  <figure class="card-banner">
+                    <a href="#">
+                      <img src="./assets/images/cer-3.png" width="1181" height="843" loading="lazy"
+                        alt="Jim Morisson Says when the musics over turn off the light" class="img-cover">
+                    </a>
+                  </figure>
+
+                  <a href="#" class="card-tag">PCAP:Programming Essentials in Python</a>
+
+                </div>
+              </li>
+              <!-- Add more as needed -->
+            </div>
+
 
           </ul>
 
+          <div class="btn-group" style="display: flex; justify-content: center; margin-top: 50px;">
+            <a href="javascript:void(0);" id="viewAllBtn" class="btn btn-primary blue">View All</a>
+          </div>
+
+
         </div>
-      </section> -->
+      </section>
 
 
 
