--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo-removebg-preview.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/site logo.jpg" type="image/x-icon">
 
   <!-- 
     - custom css link
