--- a/thanks.html
+++ b/thanks.html
@@ -11,7 +11,7 @@
 
     <title> Mit Bumtariya - Software Developer </title>
 
-    <link class="logo" rel="shortcut icon" href="./assets/images/Untitled design.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/site logo.jpg" type="image/x-icon">
 
 
 </head>
