--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
               <div class="button-row">
                 <a href="https://github.com/mitbumtariya/Portfolio" class="github-btn">View on GitHub
                 </a>
-                <a href="" class="github-btn1">See It in Action
+                <a href="https://librasphere.vercel.app/" class="github-btn1">See It in Action
                 </a>
               </div>
             </div>
@@ -456,7 +456,7 @@
               </div>
               <div class="button-row">
                 <a href="https://github.com/mitbumtariya/librasphere" class="github-btn">View on GitHub</a>
-                <a href="https://librasphere.vercel.app/" class="github-btn1">See It in Action
+                <a href="https://mitbumtariya.vercel.app/" class="github-btn1">See It in Action
 
                 </a>
               </div>
@@ -483,7 +483,8 @@
               <div class="button-row">
                 <a href="https://github.com/mitbumtariya/hotelmanagementsystem" class="github-btn">View on GitHub
                 </a>
-                <a href="" class="github-btn1">See It in Action
+                <a href="https://hotelmanagementsystem-git-main-mit-bumtariyas-projects.vercel.app"
+                  class="github-btn1">See It in Action
                 </a>
               </div>
             </div>
@@ -783,11 +784,11 @@
                 <input type="email" name="email" placeholder="Email" required class="contact-input">
 
                 <textarea name="message" placeholder="Message" required class="contact-input"></textarea>
-                
+
                 <input type="hidden" name="_subject" value="New submission!">
 
                 <input type="hidden" name="_next" value="https://mitbumtariya.vercel.app//thanks.html">
-                  
+
                 <button type="submit" class="btn-submit">Submit Message</button>
 
               </form>
