--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
 
                 <input type="hidden" name="_next" value="https://mitbumtariya.vercel.app//thanks.html">
 
-                <button type="submit" class="btn-submit">Submit Message</button>
+                <button type="submit" class="btn-submit"><a href="thanks.html"> Submit Message </a></button>
 
               </form>
 
