--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
+
 
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
@@ -115,7 +118,7 @@
 
       <section class="hero" id="home">
 
-        <div class="about-social">
+        <!-- <div class="about-social">
 
           <a href="https://github.com/mitbumtariya" target="_blank" class="social-link">
             <ion-icon name="logo-github"></ion-icon>
@@ -128,7 +131,15 @@
           <a href="https://x.com/meetbumtariya12" target="_blank" class="social-link">
             <ion-icon name="logo-twitter"></ion-icon>
           </a>
+        </div> -->
+
+
+        <div class="about-social">
+          <a href="https://x.com/meetbumtariya12" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/mitbumtariya" class="social-link" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/in/mit-bumtariya-12m01i2004t" class="social-link" title="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
+
 
         <div class="container">
 
@@ -752,7 +763,7 @@
           </div>
 
 
-          <div class="btn-group" style="display: flex; justify-content: center; margin-top: 50px;">
+          <div class="btn-group" style="display: flex; justify-content: center; margin-bottom: 50px;">
             <a href="javascript:void(0);" id="viewAllBtn" class="btn btn-primary blue">View All</a>
           </div>
 
