--- a/index.html
+++ b/index.html
@@ -8,18 +8,6 @@
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   
-  <script src="tilt.jquery.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.card').tilt({
-        scale: 1.05,
-        speed: 400,
-        maxTilt: 10,
-        glare: true,
-        maxGlare: 0.5
-      });
-    });
-  </script>
 
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
@@ -155,16 +143,8 @@
         <div class="container">
 
           <div class="hero-banner">
-
-            <span data-tilt
-              data-tilt-max="10"
-              data-tilt-speed="400"
-              data-tilt-perspective="1000"
-              data-tilt-glare="true"
-              data-tilt-max-glare="0.5">
             <img src="./assets/images/Profile.png" width="800" height="864" loading="lazy" alt="Mit's Photo"
-              class="img-cover card"></span>
-
+              class="img-cover">
             <!-- <div class="elem elem-1">
               <p class="elem-title">12</p>
 
