--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  
+
 
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 
@@ -135,7 +135,8 @@
 
         <div class="about-social">
           <a href="https://github.com/mitbumtariya" class="social-link" title="GitHub"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/mit-bumtariya-12m01i2004t" class="social-link" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.linkedin.com/in/mit-bumtariya-12m01i2004t" class="social-link" title="LinkedIn"><i
+              class="fab fa-linkedin-in"></i></a>
           <a href="https://x.com/meetbumtariya12" class="social-link" title="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
 
